--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
     "$schema": "node_modules/wrangler/config-schema.json",
-    "name": "navihive",
+    "name": "nav",
     "main": "worker/index.ts",
     "compatibility_date": "2025-04-05",
     "assets": {
